@@ -722,7 +722,7 @@ int RenderTable::calcBorderLeft() const
             if (gb.style() == BHIDDEN)
                 return 0;
             if (gb.style() > BHIDDEN)
-                borderWidth = max(borderWidth, gb.width);
+                borderWidth = max(borderWidth, static_cast<unsigned>(gb.width));
         }
         
         RenderTableSection* firstNonEmptySection = m_head ? m_head : (m_firstBody ? m_firstBody : m_foot);
@@ -735,7 +735,7 @@ int RenderTable::calcBorderLeft() const
                 return 0;
 
             if (sb.style() > BHIDDEN)
-                borderWidth = max(borderWidth, sb.width);
+                borderWidth = max(borderWidth, static_cast<unsigned>(sb.width));
 
             const RenderTableSection::CellStruct& cs = firstNonEmptySection->cellAt(0, leftmostColumn);
             
@@ -749,9 +749,9 @@ int RenderTable::calcBorderLeft() const
                     return 0;
 
                 if (cb.style() > BHIDDEN)
-                    borderWidth = max(borderWidth, cb.width);
+                    borderWidth = max(borderWidth, static_cast<unsigned>(cb.width));
                 if (rb.style() > BHIDDEN)
-                    borderWidth = max(borderWidth, rb.width);
+                    borderWidth = max(borderWidth, static_cast<unsigned>(rb.width));
             }
         }
         return borderWidth / 2;
@@ -781,7 +781,7 @@ int RenderTable::calcBorderRight() const
             if (gb.style() == BHIDDEN)
                 return 0;
             if (gb.style() > BHIDDEN)
-                borderWidth = max(borderWidth, gb.width);
+                borderWidth = max(borderWidth, static_cast<unsigned>(gb.width));
         }
         
         RenderTableSection* firstNonEmptySection = m_head ? m_head : (m_firstBody ? m_firstBody : m_foot);
@@ -794,7 +794,7 @@ int RenderTable::calcBorderRight() const
                 return 0;
 
             if (sb.style() > BHIDDEN)
-                borderWidth = max(borderWidth, sb.width);
+                borderWidth = max(borderWidth, static_cast<unsigned>(sb.width));
 
             const RenderTableSection::CellStruct& cs = firstNonEmptySection->cellAt(0, rightmostColumn);
             
@@ -808,9 +808,9 @@ int RenderTable::calcBorderRight() const
                     return 0;
 
                 if (cb.style() > BHIDDEN)
-                    borderWidth = max(borderWidth, cb.width);
+                    borderWidth = max(borderWidth, static_cast<unsigned>(cb.width));
                 if (rb.style() > BHIDDEN)
-                    borderWidth = max(borderWidth, rb.width);
+                    borderWidth = max(borderWidth, static_cast<unsigned>(rb.width));
             }
         }
         return (borderWidth + 1) / 2;
